Checkpoint: Renamed ConnectorPropertyGroup -> ConfigurationStep, ConnectorPropertySubGroup -> ConnectorPropertyGroup. Removed FlowDrain, some additional cleanup